# kredentials

./: AUTHORS  CMakeLists.txt
doc/: CMakeLists.txt  index.docbook
src/: CMakeLists.txt  krb5_wrap.cpp  krb5_wrap.h  kredentials.cpp  kredentials.h  kredentials.lsm  main.cpp  org.kde.kredentials.desktop  resources.qrc
